# models/html_response.go
@@ -1,0 +1,46 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// HTMLResponse Html response
+// swagger:model HtmlResponse
+type HTMLResponse struct {
+
+	// payload
+	Payload interface{} `json:"payload,omitempty"`
+
+	// template
+	Template string `json:"template,omitempty"`
+}
+
+// Validate validates this Html response
+func (m *HTMLResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *HTMLResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *HTMLResponse) UnmarshalBinary(b []byte) error {
+	var res HTMLResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
